@@ -1,28 +1,36 @@
 package com.spyker.framework.util.file;
 
-import cn.hutool.core.io.FileTypeUtil;
-import cn.hutool.core.io.FileUtil;
-import cn.hutool.core.io.file.FileNameUtil;
-import cn.hutool.core.text.CharSequenceUtil;
-import cn.hutool.core.util.IdUtil;
-import cn.hutool.core.util.StrUtil;
-import cn.hutool.crypto.digest.DigestUtil;
-import com.spyker.framework.util.ExStringUtils;
-import com.spyker.framework.util.date.ExDateUtils;
-import com.spyker.framework.util.uuid.ExUuidUtils;
-import jakarta.servlet.http.HttpServletRequest;
-import jakarta.servlet.http.HttpServletResponse;
-import lombok.SneakyThrows;
+import java.io.ByteArrayInputStream;
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.OutputStream;
+import java.io.UnsupportedEncodingException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.text.SimpleDateFormat;
+import java.util.Date;
+
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 
-import java.io.*;
-import java.net.URLEncoder;
-import java.nio.charset.StandardCharsets;
-import java.text.SimpleDateFormat;
-import java.util.Date;
+import com.spyker.framework.util.date.ExDateUtils;
+import com.spyker.framework.util.uuid.ExUuidUtils;
+
+import cn.hutool.core.io.FileTypeUtil;
+import cn.hutool.core.io.FileUtil;
+import cn.hutool.core.io.file.FileNameUtil;
+import cn.hutool.core.text.CharSequenceUtil;
+import cn.hutool.core.util.IdUtil;
+import cn.hutool.crypto.digest.DigestUtil;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import lombok.SneakyThrows;
 
 /**
  * 文件处理工具类
@@ -31,346 +39,344 @@ import java.util.Date;
  */
 public class FileUtils {
 
-    public static String FILENAME_PATTERN = "[a-zA-Z0-9_\\-\\|\\.\\u4e00-\\u9fa5]+";
+	public static String FILENAME_PATTERN = "[a-zA-Z0-9_\\-\\|\\.\\u4e00-\\u9fa5]+";
 
-    /**
-     * 创建临时文件
-     * 该文件会在 JVM 退出时，进行删除
-     *
-     * @param data 文件内容
-     * @return 文件
-     */
-    @SneakyThrows
-    public static File createTempFile(String data) {
-        File file = createTempFile();
-        // 写入内容
-        FileUtil.writeUtf8String(data, file);
-        return file;
-    }
+	/**
+	 * 创建临时文件 该文件会在 JVM 退出时，进行删除
+	 *
+	 * @param data 文件内容
+	 * @return 文件
+	 */
+	@SneakyThrows
+	public static File createTempFile(String data) {
+		File file = createTempFile();
+		// 写入内容
+		FileUtil.writeUtf8String(data, file);
+		return file;
+	}
 
-    /**
-     * 创建临时文件，无内容
-     * 该文件会在 JVM 退出时，进行删除
-     *
-     * @return 文件
-     */
-    @SneakyThrows
-    public static File createTempFile() {
-        // 创建文件，通过 UUID 保证唯一
-        File file = File.createTempFile(IdUtil.simpleUUID(), null);
-        // 标记 JVM 退出时，自动删除
-        file.deleteOnExit();
-        return file;
-    }
+	/**
+	 * 创建临时文件，无内容 该文件会在 JVM 退出时，进行删除
+	 *
+	 * @return 文件
+	 */
+	@SneakyThrows
+	public static File createTempFile() {
+		// 创建文件，通过 UUID 保证唯一
+		File file = File.createTempFile(IdUtil.simpleUUID(), null);
+		// 标记 JVM 退出时，自动删除
+		file.deleteOnExit();
+		return file;
+	}
 
-    /**
-     * 创建临时文件
-     * 该文件会在 JVM 退出时，进行删除
-     *
-     * @param data 文件内容
-     * @return 文件
-     */
-    @SneakyThrows
-    public static File createTempFile(byte[] data) {
-        File file = createTempFile();
-        // 写入内容
-        FileUtil.writeBytes(data, file);
-        return file;
-    }
+	/**
+	 * 创建临时文件 该文件会在 JVM 退出时，进行删除
+	 *
+	 * @param data 文件内容
+	 * @return 文件
+	 */
+	@SneakyThrows
+	public static File createTempFile(byte[] data) {
+		File file = createTempFile();
+		// 写入内容
+		FileUtil.writeBytes(data, file);
+		return file;
+	}
 
-    /**
-     * 生成文件路径
-     *
-     * @param content      文件内容
-     * @param originalName 原始文件名
-     * @return path，唯一不可重复
-     */
-    public static String generatePath(byte[] content, String originalName) {
-        String sha256Hex = DigestUtil.sha256Hex(content);
-        // 情况一：如果存在 name，则优先使用 name 的后缀
-        if (CharSequenceUtil.isNotBlank(originalName)) {
-            String extName = FileNameUtil.extName(originalName);
-            return CharSequenceUtil.isBlank(extName) ? sha256Hex : sha256Hex + "." + extName;
-        }
-        // 情况二：基于 content 计算
-        return sha256Hex + '.' + FileTypeUtil.getType(new ByteArrayInputStream(content));
-    }
+	/**
+	 * 生成文件路径
+	 *
+	 * @param content      文件内容
+	 * @param originalName 原始文件名
+	 * @return path，唯一不可重复
+	 */
+	public static String generatePath(byte[] content, String originalName) {
+		String sha256Hex = DigestUtil.sha256Hex(content);
+		// 情况一：如果存在 name，则优先使用 name 的后缀
+		if (CharSequenceUtil.isNotBlank(originalName)) {
+			String extName = FileNameUtil.extName(originalName);
+			return CharSequenceUtil.isBlank(extName) ? sha256Hex : sha256Hex + "." + extName;
+		}
+		// 情况二：基于 content 计算
+		return sha256Hex + '.' + FileTypeUtil.getType(new ByteArrayInputStream(content));
+	}
 
-    public static void write(InputStream inputStream, File toFile) throws IOException {
+	public static void write(InputStream inputStream, File toFile) throws IOException {
 
-        OutputStream outputStream = new FileOutputStream(toFile);
+		OutputStream outputStream = new FileOutputStream(toFile);
 
-        IOUtils.copy(inputStream, outputStream);
+		IOUtils.copy(inputStream, outputStream);
 
-        IOUtils.closeQuietly(inputStream);
-        IOUtils.closeQuietly(outputStream);
-    }
+		IOUtils.closeQuietly(inputStream);
+		IOUtils.closeQuietly(outputStream);
+	}
 
-    public static String getFileType(String fileName) {
+	public static String getFileType(String fileName) {
 
-        final String[] splits = fileName.split("\\.");
+		final String[] splits = fileName.split("\\.");
 
-        if (splits.length > 1) {
-            return "." + splits[splits.length - 1];
-        }
+		if (splits.length > 1) {
+			return "." + splits[splits.length - 1];
+		}
 
-        return "";
-    }
+		return "";
+	}
 
-    public static String getPathFromDate() {
+	public static String getPathFromDate() {
 
-        String format = "/" + "yyyy" + "/" + "MM" + "/" + "dd" + "/";
+		String format = "/" + "yyyy" + "/" + "MM" + "/" + "dd" + "/";
 
-        final SimpleDateFormat simpleFormat = new SimpleDateFormat(format);
-        final String result = simpleFormat.format(new Date(System.currentTimeMillis()));
+		final SimpleDateFormat simpleFormat = new SimpleDateFormat(format);
+		final String result = simpleFormat.format(new Date(System.currentTimeMillis()));
 
-        return result;
-    }
+		return result;
+	}
 
-    public static void delete(String filePath) {
-        final File file = new File(filePath);
+	public static void delete(String filePath) {
+		final File file = new File(filePath);
 
-        if (file.exists()) {
-            file.delete();
-        }
-    }
+		if (file.exists()) {
+			file.delete();
+		}
+	}
 
-    public static void delete(File deleteFile) {
+	public static void delete(File deleteFile) {
 
-        if (deleteFile.exists()) {
-            deleteFile.delete();
-        }
-    }
+		if (deleteFile.exists()) {
+			deleteFile.delete();
+		}
+	}
 
-    public static boolean exist(File file) {
+	public static boolean exist(File file) {
 
-        return file.exists() && file.isFile();
-    }
+		return file.exists() && file.isFile();
+	}
 
-    public static void createDir(String destDirName) {
-        File dir = new File(destDirName);
+	public static void createDir(String destDirName) {
+		File dir = new File(destDirName);
 
-        if (!dir.exists()) {
+		if (!dir.exists()) {
 
-            if (!destDirName.endsWith(File.separator)) {
-                destDirName = destDirName + File.separator;
-            }
+			if (!destDirName.endsWith(File.separator)) {
+				destDirName = destDirName + File.separator;
+			}
 
-            dir.mkdirs();
-        }
-    }
+			dir.mkdirs();
+		}
+	}
 
-    /**
-     * 输出指定文件的byte数组
-     *
-     * @param filePath 文件路径
-     * @param os       输出流
-     * @return
-     */
-    public static void writeBytes(String filePath, OutputStream os) throws IOException {
-        FileInputStream fis = null;
-        try {
-            File file = new File(filePath);
-            if (!file.exists()) {
-                throw new FileNotFoundException(filePath);
-            }
-            fis = new FileInputStream(file);
-            byte[] b = new byte[1024];
-            int length;
-            while ((length = fis.read(b)) > 0) {
-                os.write(b, 0, length);
-            }
-        } catch (IOException e) {
-            throw e;
-        } finally {
-            IOUtils.close(os);
-            IOUtils.close(fis);
-        }
-    }
+	/**
+	 * 输出指定文件的byte数组
+	 *
+	 * @param filePath 文件路径
+	 * @param os       输出流
+	 * @return
+	 */
+	public static void writeBytes(String filePath, OutputStream os) throws IOException {
+		FileInputStream fis = null;
+		try {
+			File file = new File(filePath);
+			if (!file.exists()) {
+				throw new FileNotFoundException(filePath);
+			}
+			fis = new FileInputStream(file);
+			byte[] b = new byte[1024];
+			int length;
+			while ((length = fis.read(b)) > 0) {
+				os.write(b, 0, length);
+			}
+		} catch (IOException e) {
+			throw e;
+		} finally {
+			IOUtils.close(os);
+			IOUtils.close(fis);
+		}
+	}
 
-    /**
-     * 写数据到文件中
-     *
-     * @param data 数据
-     * @return 目标文件
-     * @throws IOException IO异常
-     */
-    //    public static String writeImportBytes(byte[] data) throws IOException {
-    //        return writeBytes(data, PlatformConfig.getImportPath());
-    //    }
+	/**
+	 * 写数据到文件中
+	 *
+	 * @param data 数据
+	 * @return 目标文件
+	 * @throws IOException IO异常
+	 */
+	// public static String writeImportBytes(byte[] data) throws IOException {
+	// return writeBytes(data, PlatformConfig.getImportPath());
+	// }
 
-    /**
-     * 写数据到文件中
-     *
-     * @param data      数据
-     * @param uploadDir 目标文件
-     * @return 目标文件
-     * @throws IOException IO异常
-     */
-    public static String writeBytes(byte[] data, String uploadDir) throws IOException {
-        FileOutputStream fos = null;
-        String pathName = "";
-        try {
-            String extension = getFileExtendName(data);
-            //            pathName = DateUtils.datePath() + "/" + IdUtils.fastUUID() + "." + extension;
-            pathName = ExDateUtils.datePath() + "/" + ExUuidUtils.fastStringUUID() + "." + extension;
-            File file = FileUploadUtils.getAbsoluteFile(uploadDir, pathName);
-            fos = new FileOutputStream(file);
-            fos.write(data);
-        } finally {
-            IOUtils.close(fos);
-        }
-        return FileUploadUtils.getPathFileName(uploadDir, pathName);
-    }
+	/**
+	 * 写数据到文件中
+	 *
+	 * @param data      数据
+	 * @param uploadDir 目标文件
+	 * @return 目标文件
+	 * @throws IOException IO异常
+	 */
+	public static String writeBytes(byte[] data, String uploadDir) throws IOException {
+		FileOutputStream fos = null;
+		String pathName = "";
+		try {
+			String extension = getFileExtendName(data);
+			// pathName = DateUtils.datePath() + "/" + IdUtils.fastUUID() + "." + extension;
+			pathName = ExDateUtils.datePath() + "/" + ExUuidUtils.fastStringUUID() + "." + extension;
+			File file = FileUploadUtils.getAbsoluteFile(uploadDir, pathName);
+			fos = new FileOutputStream(file);
+			fos.write(data);
+		} finally {
+			IOUtils.close(fos);
+		}
+		return FileUploadUtils.getPathFileName(uploadDir, pathName);
+	}
 
-    /**
-     * 获取图像后缀
-     *
-     * @param photoByte 图像数据
-     * @return 后缀名
-     */
-    public static String getFileExtendName(byte[] photoByte) {
-        String strFileExtendName = "jpg";
-        if ((photoByte[0] == 71) && (photoByte[1] == 73) && (photoByte[2] == 70) && (photoByte[3] == 56) && ((photoByte[4] == 55) || (photoByte[4] == 57)) && (photoByte[5] == 97)) {
-            strFileExtendName = "gif";
-        } else if ((photoByte[6] == 74) && (photoByte[7] == 70) && (photoByte[8] == 73) && (photoByte[9] == 70)) {
-            strFileExtendName = "jpg";
-        } else if ((photoByte[0] == 66) && (photoByte[1] == 77)) {
-            strFileExtendName = "bmp";
-        } else if ((photoByte[1] == 80) && (photoByte[2] == 78) && (photoByte[3] == 71)) {
-            strFileExtendName = "png";
-        }
-        return strFileExtendName;
-    }
+	/**
+	 * 获取图像后缀
+	 *
+	 * @param photoByte 图像数据
+	 * @return 后缀名
+	 */
+	public static String getFileExtendName(byte[] photoByte) {
+		String strFileExtendName = "jpg";
+		if ((photoByte[0] == 71) && (photoByte[1] == 73) && (photoByte[2] == 70) && (photoByte[3] == 56)
+				&& ((photoByte[4] == 55) || (photoByte[4] == 57)) && (photoByte[5] == 97)) {
+			strFileExtendName = "gif";
+		} else if ((photoByte[6] == 74) && (photoByte[7] == 70) && (photoByte[8] == 73) && (photoByte[9] == 70)) {
+			strFileExtendName = "jpg";
+		} else if ((photoByte[0] == 66) && (photoByte[1] == 77)) {
+			strFileExtendName = "bmp";
+		} else if ((photoByte[1] == 80) && (photoByte[2] == 78) && (photoByte[3] == 71)) {
+			strFileExtendName = "png";
+		}
+		return strFileExtendName;
+	}
 
-    /**
-     * 删除文件
-     *
-     * @param filePath 文件
-     * @return
-     */
-    public static boolean deleteFile(String filePath) {
-        boolean flag = false;
-        File file = new File(filePath);
-        // 路径为文件且不为空则进行删除
-        if (file.isFile() && file.exists()) {
-            flag = file.delete();
-        }
-        return flag;
-    }
+	/**
+	 * 删除文件
+	 *
+	 * @param filePath 文件
+	 * @return
+	 */
+	public static boolean deleteFile(String filePath) {
+		boolean flag = false;
+		File file = new File(filePath);
+		// 路径为文件且不为空则进行删除
+		if (file.isFile() && file.exists()) {
+			flag = file.delete();
+		}
+		return flag;
+	}
 
-    /**
-     * 文件名称验证
-     *
-     * @param filename 文件名称
-     * @return true 正常 false 非法
-     */
-    public static boolean isValidFilename(String filename) {
-        return filename.matches(FILENAME_PATTERN);
-    }
+	/**
+	 * 文件名称验证
+	 *
+	 * @param filename 文件名称
+	 * @return true 正常 false 非法
+	 */
+	public static boolean isValidFilename(String filename) {
+		return filename.matches(FILENAME_PATTERN);
+	}
 
-    /**
-     * 检查文件是否可下载
-     *
-     * @param resource 需要下载的文件
-     * @return true 正常 false 非法
-     */
-    public static boolean checkAllowDownload(String resource) {
-        // 禁止目录上跳级别
-        if (StringUtils.contains(resource, "..")) {
-            return false;
-        }
+	/**
+	 * 检查文件是否可下载
+	 *
+	 * @param resource 需要下载的文件
+	 * @return true 正常 false 非法
+	 */
+	public static boolean checkAllowDownload(String resource) {
+		// 禁止目录上跳级别
+		if (StringUtils.contains(resource, "..")) {
+			return false;
+		}
 
-        // 检查允许下载的文件规则
-        return ArrayUtils.contains(MimeTypeUtils.DEFAULT_ALLOWED_EXTENSION, FileTypeUtils.getFileType(resource));
+		// 检查允许下载的文件规则
+		return ArrayUtils.contains(MimeTypeUtils.DEFAULT_ALLOWED_EXTENSION, FileTypeUtils.getFileType(resource));
 
-        // 不在允许下载的文件规则
-    }
+		// 不在允许下载的文件规则
+	}
 
-    /**
-     * 下载文件名重新编码
-     *
-     * @param request  请求对象
-     * @param fileName 文件名
-     * @return 编码后的文件名
-     */
-    public static String setFileDownloadHeader(HttpServletRequest request, String fileName) throws
-            UnsupportedEncodingException {
-        final String agent = request.getHeader("USER-AGENT");
-        String filename = fileName;
-        if (agent.contains("MSIE")) {
-            // IE浏览器
-            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
-            filename = filename.replace("+", " ");
-        } else if (agent.contains("Firefox")) {
-            // 火狐浏览器
-            filename = new String(fileName.getBytes(), "ISO8859-1");
-        } else if (agent.contains("Chrome")) {
-            // google浏览器
-            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
-        } else {
-            // 其它浏览器
-            filename = URLEncoder.encode(filename, StandardCharsets.UTF_8);
-        }
-        return filename;
-    }
+	/**
+	 * 下载文件名重新编码
+	 *
+	 * @param request  请求对象
+	 * @param fileName 文件名
+	 * @return 编码后的文件名
+	 */
+	public static String setFileDownloadHeader(HttpServletRequest request, String fileName)
+			throws UnsupportedEncodingException {
+		final String agent = request.getHeader("USER-AGENT");
+		String filename = fileName;
+		if (agent.contains("MSIE")) {
+			// IE浏览器
+			filename = URLEncoder.encode(filename, StandardCharsets.UTF_8.name());
+			filename = filename.replace("+", " ");
+		} else if (agent.contains("Firefox")) {
+			// 火狐浏览器
+			filename = new String(fileName.getBytes(), "ISO8859-1");
+		} else if (agent.contains("Chrome")) {
+			// google浏览器
+			filename = URLEncoder.encode(filename, StandardCharsets.UTF_8.name());
+		} else {
+			// 其它浏览器
+			filename = URLEncoder.encode(filename, StandardCharsets.UTF_8.name());
+		}
+		return filename;
+	}
 
-    /**
-     * 下载文件名重新编码
-     *
-     * @param response     响应对象
-     * @param realFileName 真实文件名
-     */
-    public static void setAttachmentResponseHeader(HttpServletResponse response, String realFileName) throws
-            UnsupportedEncodingException {
-        String percentEncodedFileName = percentEncode(realFileName);
+	/**
+	 * 下载文件名重新编码
+	 *
+	 * @param response     响应对象
+	 * @param realFileName 真实文件名
+	 */
+	public static void setAttachmentResponseHeader(HttpServletResponse response, String realFileName)
+			throws UnsupportedEncodingException {
+		String percentEncodedFileName = percentEncode(realFileName);
 
-        String contentDispositionValue = "attachment; filename=" + percentEncodedFileName + ";" + "filename*=" + "utf"
-                + "-8''" + percentEncodedFileName;
+		String contentDispositionValue = "attachment; filename=" + percentEncodedFileName + ";" + "filename*=" + "utf"
+				+ "-8''" + percentEncodedFileName;
 
-        response.addHeader("Access-Control-Expose-Headers", "Content-Disposition,download-filename");
-        response.setHeader("Content-disposition", contentDispositionValue);
-        response.setHeader("download-filename", percentEncodedFileName);
-    }
+		response.addHeader("Access-Control-Expose-Headers", "Content-Disposition,download-filename");
+		response.setHeader("Content-disposition", contentDispositionValue);
+		response.setHeader("download-filename", percentEncodedFileName);
+	}
 
-    /**
-     * 百分号编码工具方法
-     *
-     * @param s 需要百分号编码的字符串
-     * @return 百分号编码后的字符串
-     */
-    public static String percentEncode(String s) throws UnsupportedEncodingException {
-        String encode = URLEncoder.encode(s, StandardCharsets.UTF_8);
-        return encode.replaceAll("\\+", "%20");
-    }
+	/**
+	 * 百分号编码工具方法
+	 *
+	 * @param s 需要百分号编码的字符串
+	 * @return 百分号编码后的字符串
+	 */
+	public static String percentEncode(String s) throws UnsupportedEncodingException {
+		String encode = URLEncoder.encode(s, StandardCharsets.UTF_8.name());
+		return encode.replaceAll("\\+", "%20");
+	}
 
-    /**
-     * 获取文件名称 /profile/upload/2022/04/16/platform.png -- platform.png
-     *
-     * @param fileName 路径名称
-     * @return 没有文件路径的名称
-     */
-    public static String getName(String fileName) {
-        if (fileName == null) {
-            return null;
-        }
-        int lastUnixPos = fileName.lastIndexOf('/');
-        int lastWindowsPos = fileName.lastIndexOf('\\');
-        int index = Math.max(lastUnixPos, lastWindowsPos);
-        return fileName.substring(index + 1);
-    }
+	/**
+	 * 获取文件名称 /profile/upload/2022/04/16/platform.png -- platform.png
+	 *
+	 * @param fileName 路径名称
+	 * @return 没有文件路径的名称
+	 */
+	public static String getName(String fileName) {
+		if (fileName == null) {
+			return null;
+		}
+		int lastUnixPos = fileName.lastIndexOf('/');
+		int lastWindowsPos = fileName.lastIndexOf('\\');
+		int index = Math.max(lastUnixPos, lastWindowsPos);
+		return fileName.substring(index + 1);
+	}
 
-    /**
-     * 获取不带后缀文件名称 /profile/upload/2022/04/16/platform.png -- platform
-     *
-     * @param fileName 路径名称
-     * @return 没有文件路径和后缀的名称
-     */
-    public static String getNameNotSuffix(String fileName) {
-        if (fileName == null) {
-            return null;
-        }
-        String baseName = FilenameUtils.getBaseName(fileName);
-        return baseName;
-    }
+	/**
+	 * 获取不带后缀文件名称 /profile/upload/2022/04/16/platform.png -- platform
+	 *
+	 * @param fileName 路径名称
+	 * @return 没有文件路径和后缀的名称
+	 */
+	public static String getNameNotSuffix(String fileName) {
+		if (fileName == null) {
+			return null;
+		}
+		String baseName = FilenameUtils.getBaseName(fileName);
+		return baseName;
+	}
 }
